#AP-700,AP-702,AP-696,AP-690,AP-672 pagination issue resolved,captcha issue resolved for DSAR form,Alignment in DSAR public form,Email disable issue resolved,Remove cross mark respectivly

--- a/src/app/privacy/dsar/dsar-requestdetails/dsar-requestdetails.component.scss
+++ b/src/app/privacy/dsar/dsar-requestdetails/dsar-requestdetails.component.scss
@@ -745,3 +745,64 @@ ul.ngx-pagination {
 .word-wrap {
     white-space: normal;
 }
+
+.control-box .form-check-inline:not(:first-child) {
+    display: inline-block;
+    /* margin: 0 2px 0 10px; */
+    position: relative;
+  }
+
+  
+.form-check-inline:not(:first-child) {
+    display: inline-block;
+    /* margin: 0 2px 0 10px; */
+    position: relative;
+  }
+  
+
+.form-check-inline input[type='radio'] {
+    margin: 3px 5px 0 0;
+  }
+
+  
+.form-check-inline input[type="radio"], .form-check-inline input[type="checkbox"] {
+    margin: 3px 5px 0 0;
+    opacity: 0;
+    display: none;
+    /* position: absolute;
+    width: 20px;
+    top: 7px;
+    left: 5px; */
+  }
+  
+  .form-check-inline label {
+      display: inline-block;
+      background-color: #f5f5f5;
+      padding: 5px 10px;
+      font-family: inherit;
+      font-size: 13px;
+      font-weight: normal;
+      border: 2px solid #ced4da;
+      border-radius: 4px;
+  }
+  
+  .form-check-inline label:hover {
+    background-color: #f5f5f5;
+    color:#0168fa;
+    border-color: #0168fa;
+    cursor: pointer;
+  }
+  
+  .form-check-inline input[type="radio"]:focus + label, .form-check-inline input[type="checkbox"]:focus + label {
+      border: 1px solid #0168fa;
+  }
+  
+  .form-check-inline input[type="radio"]:checked + label, .form-check-inline input[type="checkbox"]:checked + label {
+      background-color: #4994fe;
+      border-color: #0168fa;
+      color: #fff;
+  }
+
+  .form-check-inline label {
+    margin-right: 10px;
+ }
