--- a/src/app/privacy/dsar/dsarform/dsarform.component.scss
+++ b/src/app/privacy/dsar/dsarform/dsarform.component.scss
@@ -164,9 +164,6 @@
     margin: 5px 0;
   }
 
-  .btn-sm {
-    padding: 3px 5px 5px 5px;
-  }
 
   .form-check-label {
     display: inherit;
